--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>webapp5</title>
+    <title>Item Modifier</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -30,39 +30,27 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li class="active"><a href="#">Main</a></li>
+          <li><a href="#">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
         </ul>
-        <h3 class="text-muted">webapp5</h3>
-      </div>
-
-      <div class="jumbotron">
-        <h1>'Allo, 'Allo!</h1>
-        <p class="lead">Always a pleasure scaffolding your apps.</p>
-        <p><a class="btn btn-lg btn-success" href="#">Splendid! <span class="glyphicon glyphicon-ok"></span></a></p>
+        <h3 class="text-muted">Item Modifier</h3>
       </div>
 
       <div class="row marketing">
-
-
-
-<table data-toggle="table" data-url="data1.json" data-click-to-select="true" data-show-refresh="true" data-height="520" data-show-toggle="true" data-show-columns="true" data-pagination="true" data-search="true" data-select-item-name="toolbar1">
-    <thead>
-    <tr>
-        <th data-field="state" data-checkbox="true">Item ID</th>
-        <th data-field="id" data-align="right">Item ID</th>
-        <th data-field="name" data-align="center">Item Name</th>
-        <th data-field="price" data-align="left">Item Price</th>
-    </tr>
-    </thead>
-</table>
-
-
+		<table data-toggle="table" data-url="data1.json" data-click-to-select="true" data-show-refresh="true" data-height="520" data-show-toggle="true" data-show-columns="true" data-pagination="true" data-search="true" data-select-item-name="toolbar1">
+			<thead>
+				<tr>
+					<th data-field="state" data-checkbox="true"></th>
+					<th data-field="id" data-align="right">ID</th>
+					<th data-field="name" data-align="center">Name</th>
+					<th data-field="price" data-align="left">Price</th>
+				</tr>
+			</thead>
+		</table>
       </div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-wrench"></span> NXS Motorsports</p>
       </div>
 
     </div>
