--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           <li class="active"><a href="#">Main</a></li>
           <li><a href="#">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
         </ul>
-        <h3 class="text-muted">Item Modifier</h3>
+        <h3 class="text-muted">Item Modifier v2</h3>
       </div>
 
       <div class="row marketing">
