--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           <li class="active"><a href="#">Main</a></li>
           <li><a href="#">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
         </ul>
-        <h3 class="text-muted">Item Modifier v2</h3>
+        <h3 class="text-muted">Item Modifier v3</h3>
       </div>
 
       <div class="row marketing">
@@ -41,9 +41,11 @@
 			<thead>
 				<tr>
 					<th data-field="state" data-checkbox="true"></th>
-					<th data-field="id" data-align="right">ID</th>
-					<th data-field="name" data-align="center">Name</th>
-					<th data-field="price" data-align="left">Price</th>
+					<th data-field="itemNumber" data-sortable="true">itemNumber</th>
+					<th data-field="title" data-sortable="true">title</th>
+					<th data-field="qtyRemaining" data-sortable="true">qtyRemaining</th>
+					<th data-field="qtySold" data-sortable="true">qtySold</th>
+					<th data-field="dateLastSold" data-sortable="true">dateLastSold</th>
 				</tr>
 			</thead>
 		</table>
